# manage-hourly-employee-access

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
ansible/: deploy_timer.yml
ansible/templates/: systemd_service.j2  systemd_timer.j2
src/manage_hourly_employee_access/: __about__.py  manage_hourly_employee_access.py
tests/: __init__.py  test_manage_hourly_employee_access.py
